# gi-cairo

./: Changelog  LICENSE  README.md  gi-cairo.cabal  stack.yaml
src/: Helper.hs
src/GI/: Cairo.hs
src/GI/Cairo/: Connector.hs  Enums.hs
src/GI/Cairo/Structs/: Context.hs  Device.hs  FontFace.hs  FontOptions.hs  Matrix.hs  Path.hs  Pattern.hs  RectangleInt.hs  Region.hs  ScaledFont.hs  Surface.hs
test/: Cairo.hs  cabal.project  haskell-gi-examples.cabal  stack.yaml
